# ocr-solver

./: .gitignore  README.md  build.gradle  changelog
app/: CMakeLists.txt  build.gradle
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: blobbing.cpp  cv_utils.cpp  jni_utils.cpp  jni_utils.h  lines.cpp  lines_mask.cpp  misc.cpp  super_lines.cpp  super_lines.h  super_lines_removal.cpp  super_lines_removal.h
app/src/main/java/com/azbyn/ocr/: AcceptDensityFragment.kt  AcceptFragment.kt  BaseFragment.kt  BaseOverlay.kt  BaseRoiOverlay.kt  ConfirmationDialog.kt  FragmentManagerAdapter.kt  ImageViewFragment.kt  JniImpl.kt  MainActivity.kt  Misc.kt  ResultFragment.kt  SlidersFragments.kt  ZoomableImageView.kt  ZoomableImageViewJ.java
app/src/main/java/com/azbyn/ocr/capture/: AngleIndicator.kt  AutoFitTextureView.kt  (+7 more)
app/src/main/res/drawable/: checkmark.xml  ic_crop.xml  ic_fast_forward_small.xml  ic_flash_always.xml  ic_flash_auto.xml  ic_flash_off.xml  ic_flash_on.xml  ic_image_small.xml  ic_ok_small.xml  ic_redo.xml  ic_reset.xml  ic_right_small.xml  ic_rotate.xml  ic_rotate_90_degrees_ccw.xml  ic_rotate_90_degrees_cw.xml  ic_save_small.xml  ic_straighten.xml  ic_straighten_small.xml  ic_take_photo.xml
app/src/main/res/layout/: accept.xml  accept_density.xml  capture.xml  crop.xml  main_activity.xml  result.xml  rotate.xml  select_density.xml  select_roi.xml  sliders1_edit.xml  sliders2_edit.xml  sliders3_edit.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
(+27 files in other folders)
